Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSOGOcO6HV3MiQ9Q9IAaO5",
+      "authorship_tag": "ABX9TyP52TGXWNKUudcIsE/bQXUa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,7 +144,7 @@
         "def add_user(username):\n",
         "    with sqlite3.connect(db) as connection:\n",
         "        cursor = connection.cursor()\n",
-        "        user = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()\n",
+        "        user = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
         "        if user is not None:\n",
         "            print(\"Пользователь существует\")\n",
         "            return\n",
@@ -155,7 +155,7 @@
         "def add_chat(username, chatname):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    chat = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()\n",
+        "    chat = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
         "    if chat is not None:\n",
         "        print(\"Чат существует\")\n",
         "        return\n",
@@ -201,8 +201,8 @@
         "\n",
         "create_db()\n",
         "\n",
-        "# add_user(\"Ivan\")\n",
-        "# add_chat(\"Ivan\", \"My Chat\")\n",
+        "add_user(\"Ivan\")\n",
+        "add_chat(\"Ivan\", \"My Chat\")\n",
         "# add_message(\"Ivan\", \"My Chat\", \"Hello, world!\")\n",
         "# add_user(\"Kate\")\n",
         "# add_chat(\"Kate\", \"My Chat\")\n",
@@ -215,10 +215,23 @@
         "# delete_message(\"Kate\", \"My Chat\", \"Hello, world!\")"
       ],
       "metadata": {
-        "id": "Hqd48Xvo09YO"
+        "id": "Hqd48Xvo09YO",
+        "outputId": "0c6e87c0-e2b6-4c05-ff58-75e1cac16f09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Пользователь существует\n",
+            "Чат существует\n"
+          ]
+        }
+      ]
     }
   ]
 }
