Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP52TGXWNKUudcIsE/bQXUa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "6d3f8202-c108-4e95-9178-3fe3d6dc1239"
+        "outputId": "ad52c9e0-fc02-4afd-f6e2-c88c877e9e7a"
       },
       "outputs": [
         {
@@ -42,28 +41,49 @@
           "name": "stdout",
           "text": [
             "users\n",
-            "+------+------------+\n",
-            "|   id |  username  |\n",
-            "+======+============+\n",
-            "|    1 |    Ivan    |\n",
-            "+------+------------+\n",
-            "|    2 |    Kate    |\n",
-            "+------+------------+\n",
+            "+------+--------+-------+\n",
+            "|   id |  name  |   age |\n",
+            "+======+========+=======+\n",
+            "|    1 |  Alex  |    23 |\n",
+            "+------+--------+-------+\n",
+            "|    2 |  Ann   |    22 |\n",
+            "+------+--------+-------+\n",
             "\n",
             "\n",
             "chats\n",
-            "+------+-----------+------------+---------------------+\n",
-            "|   id |   user_id |  chatname  |     created_at      |\n",
-            "+======+===========+============+=====================+\n",
-            "|    3 |         1 |  My Chat   | 2023-11-13 04:07:04 |\n",
-            "+------+-----------+------------+---------------------+\n",
+            "+------+--------------+\n",
+            "|   id |     name     |\n",
+            "+======+==============+\n",
+            "|    1 |   new_chat   |\n",
+            "+------+--------------+\n",
+            "|    2 | another_chat |\n",
+            "+------+--------------+\n",
+            "\n",
+            "\n",
+            "chat_users\n",
+            "+-----------+-----------+\n",
+            "|   chat_id |   user_id |\n",
+            "+===========+===========+\n",
+            "|         2 |         1 |\n",
+            "+-----------+-----------+\n",
+            "|         1 |         2 |\n",
+            "+-----------+-----------+\n",
+            "|         2 |         2 |\n",
+            "+-----------+-----------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+-----------+--------------+\n",
-            "|  id  |  user_id  |  chat_id  |  message  |  created_at  |\n",
-            "+======+===========+===========+===========+==============+\n",
-            "+------+-----------+-----------+-----------+--------------+\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|   id |   chat_id |   user_id |  message  |     created_at      |\n",
+            "+======+===========+===========+===========+=====================+\n",
+            "|    1 |         1 |         1 |    hi     | 2023-11-16 18:14:34 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|    2 |         2 |         1 |    hi     | 2023-11-16 18:14:34 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|    3 |         1 |         2 |    hi     | 2023-11-16 18:14:34 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|    4 |         2 |         2 |    hi     | 2023-11-16 18:14:34 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
             "\n",
             "\n"
           ]
@@ -77,7 +97,7 @@
         "db = 'chat.db'\n",
         "\n",
         "def show_tables():\n",
-        "  tables = ['users', 'chats', 'messages']\n",
+        "  tables = ['users', 'chats', 'chat_users', 'messages']\n",
         "  def show(tablename):\n",
         "    try:\n",
         "      with sqlite3.connect(db) as connection:\n",
@@ -107,131 +127,164 @@
         "    cursor = connection.cursor()\n",
         "    cursor.execute(\n",
         "        \"\"\"\n",
-        "        CREATE TABLE IF NOT EXISTS users (\n",
+        "          CREATE TABLE IF NOT EXISTS users (\n",
         "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            username TEXT NOT NULL\n",
-        "        )\n",
+        "            name TEXT,\n",
+        "            age INTEGER\n",
+        "          );\n",
         "        \"\"\"\n",
         "    )\n",
         "    cursor.execute(\n",
         "        \"\"\"\n",
-        "        CREATE TABLE IF NOT EXISTS chats (\n",
+        "          CREATE TABLE IF NOT EXISTS chats (\n",
         "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            user_id INTEGER NOT NULL,\n",
-        "            chatname TEXT NOT NULL,\n",
-        "            created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,\n",
-        "            FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE\n",
-        "        )\n",
+        "            name TEXT\n",
+        "          );\n",
         "        \"\"\"\n",
         "    )\n",
         "    cursor.execute(\n",
         "        \"\"\"\n",
-        "        CREATE TABLE IF NOT EXISTS messages (\n",
+        "          CREATE TABLE IF NOT EXISTS chat_users (\n",
+        "            chat_id INTEGER,\n",
+        "            user_id INTEGER,\n",
+        "            PRIMARY KEY (chat_id, user_id),\n",
+        "            FOREIGN KEY (chat_id) REFERENCES chats (id) ON DELETE CASCADE,\n",
+        "            FOREIGN KEY (user_id) REFERENCES users (id)\n",
+        "          );\n",
+        "        \"\"\"\n",
+        "    )\n",
+        "    cursor.execute(\n",
+        "        \"\"\"\n",
+        "          CREATE TABLE IF NOT EXISTS messages (\n",
         "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            user_id INTEGER NOT NULL,\n",
-        "            chat_id INTEGER NOT NULL,\n",
-        "            message TEXT NOT NULL,\n",
-        "            created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,\n",
-        "            FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,\n",
-        "            FOREIGN KEY (chat_id) REFERENCES chats(id) ON DELETE CASCADE\n",
-        "        )\n",
+        "            chat_id INTEGER,\n",
+        "            user_id INTEGER,\n",
+        "            message TEXT,\n",
+        "            created_at DATETIME\n",
+        "          );\n",
         "        \"\"\"\n",
         "    )\n",
         "    connection.commit()\n",
         "\n",
         "\n",
         "\n",
-        "def add_user(username):\n",
-        "    with sqlite3.connect(db) as connection:\n",
-        "        cursor = connection.cursor()\n",
-        "        user = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
-        "        if user is not None:\n",
-        "            print(\"Пользователь существует\")\n",
-        "            return\n",
-        "        cursor.execute(\"INSERT INTO users (username) VALUES (?)\", (username,))\n",
-        "        connection.commit()\n",
-        "\n",
-        "\n",
-        "def add_chat(username, chatname):\n",
-        "  with sqlite3.connect(db) as connection:\n",
+        "def create_user(name, age):\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
         "    cursor = connection.cursor()\n",
-        "    chat = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
-        "    if chat is not None:\n",
-        "        print(\"Чат существует\")\n",
-        "        return\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
-        "    cursor.execute(\"INSERT INTO chats (user_id, chatname) VALUES (?, ?)\", (user_id, chatname,))\n",
+        "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (name, age))\n",
         "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
         "\n",
         "\n",
-        "def add_message(username, chatname, message):\n",
-        "  with sqlite3.connect(db) as connection:\n",
+        "def create_chat(name):\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
-        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
-        "    cursor.execute(\"INSERT INTO messages (user_id, chat_id, message) VALUES (?, ?, ?)\", (user_id, chat_id, message,))\n",
+        "    cursor.execute(\"INSERT INTO chats (name) VALUES (?)\", (name,))\n",
         "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
+        "\n",
+        "\n",
+        "def add_user_to_chat(username, chat_name):\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
+        "    cursor = connection.cursor()\n",
+        "    cursor.execute(\"\"\"\n",
+        "        SELECT c.id, u.id\n",
+        "        FROM chats AS c\n",
+        "        JOIN users AS u ON c.name = ? AND u.name = ?\n",
+        "    \"\"\", (chat_name, username))\n",
+        "    chat_id, user_id = cursor.fetchone()\n",
+        "    cursor.execute(\"INSERT INTO chat_users (chat_id, user_id) VALUES (?, ?)\", (chat_id, user_id))\n",
+        "\n",
+        "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
+        "\n",
+        "\n",
+        "def send_message(username, chat_name, message):\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
+        "    cursor = connection.cursor()\n",
+        "    cursor.execute(\"\"\"\n",
+        "        SELECT c.id, u.id\n",
+        "        FROM chats AS c\n",
+        "        JOIN users AS u ON c.name = ? AND u.name = ?\n",
+        "    \"\"\", (chat_name, username))\n",
+        "    chat_id, user_id = cursor.fetchone()\n",
+        "    cursor.execute(\"INSERT INTO messages (chat_id, user_id, message, created_at) VALUES (?, ?, ?, CURRENT_TIMESTAMP)\", (chat_id, user_id, message))\n",
+        "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
         "\n",
         "\n",
         "def delete_user(username):\n",
-        "  with sqlite3.connect(db) as connection:\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
         "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"DELETE FROM users WHERE username = ?\", (username,))\n",
+        "    cursor.execute(\"SELECT id FROM users WHERE name = ?\", (username,))\n",
+        "    user_id = cursor.fetchone()[0]\n",
+        "    cursor.execute(\"DELETE FROM users WHERE id = ?\", (user_id,))\n",
         "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
         "\n",
         "\n",
-        "def delete_chat(username, chatname):\n",
-        "  with sqlite3.connect(db) as connection:\n",
+        "def delete_chat(chat_name):\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
-        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
-        "    cursor.execute(\"DELETE FROM messages WHERE chat_id = ?\", (chat_id,))\n",
+        "    cursor.execute(\"SELECT id FROM chats WHERE name = ?\", (chat_name,))\n",
+        "    chat_id = cursor.fetchone()[0]\n",
         "    cursor.execute(\"DELETE FROM chats WHERE id = ?\", (chat_id,))\n",
         "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
         "\n",
         "\n",
-        "def delete_message(username, chatname, message):\n",
-        "  with sqlite3.connect(db) as connection:\n",
+        "def delete_user_from_chat(username, chat_name):\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
-        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
-        "    cursor.execute(\"DELETE FROM messages WHERE user_id = ? AND chat_id = ? AND message = ?\", (user_id, chat_id, message,))\n",
+        "    cursor.execute(\"\"\"\n",
+        "        SELECT c.id, u.id\n",
+        "        FROM chats AS c\n",
+        "        JOIN users AS u ON c.name = ? AND u.name = ?\n",
+        "    \"\"\", (chat_name, username))\n",
+        "    chat_id, user_id = cursor.fetchone()\n",
+        "    cursor.execute(\"DELETE FROM chat_users WHERE chat_id = ? AND user_id = ?\", (chat_id, user_id))\n",
         "    connection.commit()\n",
+        "    cursor.close()\n",
+        "    connection.close()\n",
         "\n",
         "\n",
-        "create_db()\n",
+        "def get_users():\n",
+        "    connection = sqlite3.connect(\"chat.db\")\n",
+        "    cursor = connection.cursor()\n",
+        "    cursor.execute(\"SELECT * FROM users\")\n",
         "\n",
-        "add_user(\"Ivan\")\n",
-        "add_chat(\"Ivan\", \"My Chat\")\n",
-        "# add_message(\"Ivan\", \"My Chat\", \"Hello, world!\")\n",
-        "# add_user(\"Kate\")\n",
-        "# add_chat(\"Kate\", \"My Chat\")\n",
-        "# add_message(\"Kate\", \"My Chat\", \"Hello, world!\")\n",
-        "# delete_user(\"Ivan\")\n",
-        "# delete_chat(\"Ivan\", \"My Chat\")\n",
-        "# delete_message(\"Ivan\", \"My Chat\", \"Hello, world!\")\n",
-        "# delete_user(\"Kate\")\n",
-        "# delete_chat(\"Kate\", \"My Chat\")\n",
-        "# delete_message(\"Kate\", \"My Chat\", \"Hello, world!\")"
+        "\n",
+        "\n",
+        "# create_db()\n",
+        "\n",
+        "# create_user(\"Alex\", 23)\n",
+        "# create_user(\"Ann\", 22)\n",
+        "# create_chat(\"new_chat\")\n",
+        "# create_chat(\"another_chat\")\n",
+        "# add_user_to_chat(\"Alex\", \"new_chat\")\n",
+        "# add_user_to_chat(\"Alex\", \"another_chat\")\n",
+        "# add_user_to_chat(\"Ann\", \"new_chat\")\n",
+        "# add_user_to_chat(\"Ann\", \"another_chat\")\n",
+        "# send_message(\"Alex\", \"new_chat\", \"hi\")\n",
+        "# send_message(\"Alex\", \"another_chat\", \"hi\")\n",
+        "# send_message(\"Ann\", \"new_chat\", \"hi\")\n",
+        "# send_message(\"Ann\", \"another_chat\", \"hi\")\n",
+        "\n",
+        "\n",
+        "# delete_user(\"Alex\")\n",
+        "delete_user_from_chat(\"Alex\", \"new_chat\")"
       ],
       "metadata": {
-        "id": "Hqd48Xvo09YO",
-        "outputId": "0c6e87c0-e2b6-4c05-ff58-75e1cac16f09",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Hqd48Xvo09YO"
       },
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Пользователь существует\n",
-            "Чат существует\n"
-          ]
-        }
-      ]
+      "execution_count": 55,
+      "outputs": []
     }
   ]
 }
