Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "ad52c9e0-fc02-4afd-f6e2-c88c877e9e7a"
+        "outputId": "53f9f041-dc21-4bf4-c171-c9532665bcee"
       },
       "outputs": [
         {
@@ -41,49 +41,35 @@
           "name": "stdout",
           "text": [
             "users\n",
-            "+------+--------+-------+\n",
-            "|   id |  name  |   age |\n",
-            "+======+========+=======+\n",
-            "|    1 |  Alex  |    23 |\n",
-            "+------+--------+-------+\n",
-            "|    2 |  Ann   |    22 |\n",
-            "+------+--------+-------+\n",
+            "+------+--------+-------+--------+\n",
+            "|   id |  name  |   age |  city  |\n",
+            "+======+========+=======+========+\n",
+            "|    2 |  Ann   |    22 | Paris  |\n",
+            "+------+--------+-------+--------+\n",
             "\n",
             "\n",
             "chats\n",
-            "+------+--------------+\n",
-            "|   id |     name     |\n",
-            "+======+==============+\n",
-            "|    1 |   new_chat   |\n",
-            "+------+--------------+\n",
-            "|    2 | another_chat |\n",
-            "+------+--------------+\n",
-            "\n",
-            "\n",
-            "chat_users\n",
-            "+-----------+-----------+\n",
-            "|   chat_id |   user_id |\n",
-            "+===========+===========+\n",
-            "|         2 |         1 |\n",
-            "+-----------+-----------+\n",
-            "|         1 |         2 |\n",
-            "+-----------+-----------+\n",
-            "|         2 |         2 |\n",
-            "+-----------+-----------+\n",
+            "+------+--------------+--------------+---------------+----------------------------+\n",
+            "|   id |     name     |  created_by  |  description  |         created_at         |\n",
+            "+======+==============+==============+===============+============================+\n",
+            "|    1 |   new_chat   |     Alex     |  decription   | 2023-11-17 09:15:16.258711 |\n",
+            "+------+--------------+--------------+---------------+----------------------------+\n",
+            "|    2 | another_chat |     Ann      |  decription   | 2023-11-17 09:15:16.267521 |\n",
+            "+------+--------------+--------------+---------------+----------------------------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+-----------+---------------------+\n",
-            "|   id |   chat_id |   user_id |  message  |     created_at      |\n",
-            "+======+===========+===========+===========+=====================+\n",
-            "|    1 |         1 |         1 |    hi     | 2023-11-16 18:14:34 |\n",
-            "+------+-----------+-----------+-----------+---------------------+\n",
-            "|    2 |         2 |         1 |    hi     | 2023-11-16 18:14:34 |\n",
-            "+------+-----------+-----------+-----------+---------------------+\n",
-            "|    3 |         1 |         2 |    hi     | 2023-11-16 18:14:34 |\n",
-            "+------+-----------+-----------+-----------+---------------------+\n",
-            "|    4 |         2 |         2 |    hi     | 2023-11-16 18:14:34 |\n",
-            "+------+-----------+-----------+-----------+---------------------+\n",
+            "+------+--------------+------------+-----------+----------------------------+\n",
+            "|   id |   chatname   |  username  |  message  |         created_at         |\n",
+            "+======+==============+============+===========+============================+\n",
+            "|    1 |   new_chat   |    Alex    |    hi     | 2023-11-17 09:15:16.275738 |\n",
+            "+------+--------------+------------+-----------+----------------------------+\n",
+            "|    2 | another_chat |    Alex    |    hi     | 2023-11-17 09:15:16.284147 |\n",
+            "+------+--------------+------------+-----------+----------------------------+\n",
+            "|    3 |   new_chat   |    Ann     |    hi     | 2023-11-17 09:15:16.292277 |\n",
+            "+------+--------------+------------+-----------+----------------------------+\n",
+            "|    4 | another_chat |    Ann     |    hi     | 2023-11-17 09:15:16.300039 |\n",
+            "+------+--------------+------------+-----------+----------------------------+\n",
             "\n",
             "\n"
           ]
@@ -97,7 +83,7 @@
         "db = 'chat.db'\n",
         "\n",
         "def show_tables():\n",
-        "  tables = ['users', 'chats', 'chat_users', 'messages']\n",
+        "  tables = ['users', 'chats', 'messages']\n",
         "  def show(tablename):\n",
         "    try:\n",
         "      with sqlite3.connect(db) as connection:\n",
@@ -123,167 +109,131 @@
       "cell_type": "code",
       "source": [
         "def create_db():\n",
-        "  with sqlite3.connect(db) as connection:\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\n",
-        "        \"\"\"\n",
-        "          CREATE TABLE IF NOT EXISTS users (\n",
-        "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            name TEXT,\n",
-        "            age INTEGER\n",
-        "          );\n",
-        "        \"\"\"\n",
-        "    )\n",
-        "    cursor.execute(\n",
-        "        \"\"\"\n",
-        "          CREATE TABLE IF NOT EXISTS chats (\n",
-        "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            name TEXT\n",
-        "          );\n",
-        "        \"\"\"\n",
-        "    )\n",
-        "    cursor.execute(\n",
-        "        \"\"\"\n",
-        "          CREATE TABLE IF NOT EXISTS chat_users (\n",
-        "            chat_id INTEGER,\n",
-        "            user_id INTEGER,\n",
-        "            PRIMARY KEY (chat_id, user_id),\n",
-        "            FOREIGN KEY (chat_id) REFERENCES chats (id) ON DELETE CASCADE,\n",
-        "            FOREIGN KEY (user_id) REFERENCES users (id)\n",
-        "          );\n",
-        "        \"\"\"\n",
-        "    )\n",
-        "    cursor.execute(\n",
-        "        \"\"\"\n",
-        "          CREATE TABLE IF NOT EXISTS messages (\n",
-        "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            chat_id INTEGER,\n",
-        "            user_id INTEGER,\n",
-        "            message TEXT,\n",
-        "            created_at DATETIME\n",
-        "          );\n",
-        "        \"\"\"\n",
-        "    )\n",
-        "    connection.commit()\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        cursor.execute(\n",
+        "            \"\"\"\n",
+        "                CREATE TABLE IF NOT EXISTS users (\n",
+        "                    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "                    name TEXT UNIQUE,\n",
+        "                    age INTEGER,\n",
+        "                    city TEXT\n",
+        "                );\n",
+        "            \"\"\"\n",
+        "        )\n",
+        "        cursor.execute(\n",
+        "            \"\"\"\n",
+        "                CREATE TABLE IF NOT EXISTS chats (\n",
+        "                    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "                    name TEXT UNIQUE,\n",
+        "                    created_by TEXT,\n",
+        "                    description TEXT,\n",
+        "                    created_at DATETIME\n",
+        "                );\n",
+        "            \"\"\"\n",
+        "        )\n",
+        "        cursor.execute(\n",
+        "            \"\"\"\n",
+        "                CREATE TABLE IF NOT EXISTS messages (\n",
+        "                    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "                    chatname TEXT,\n",
+        "                    username TEXT,\n",
+        "                    message TEXT,\n",
+        "                    created_at DATETIME\n",
+        "                );\n",
+        "            \"\"\"\n",
+        "        )\n",
+        "        connection.commit()\n",
         "\n",
         "\n",
         "\n",
-        "def create_user(name, age):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (name, age))\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
+        "def create_user(username, age, city):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "      cursor = connection.cursor()\n",
+        "      query = \"\"\"\n",
+        "                  INSERT INTO users (name, age, city)\n",
+        "                  VALUES (?, ?, ?)\n",
+        "              \"\"\"\n",
+        "      cursor.execute(query, (username, age, city))\n",
+        "      connection.commit()\n",
         "\n",
         "\n",
-        "def create_chat(name):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"INSERT INTO chats (name) VALUES (?)\", (name,))\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
+        "def create_chat(chatname, description, created_by):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "      cursor = connection.cursor()\n",
+        "      query = \"\"\"\n",
+        "                  INSERT INTO chats (name, description, created_at, created_by)\n",
+        "                  VALUES (?, ?, ?, ?)\n",
+        "              \"\"\"\n",
+        "      cursor.execute(query, (chatname, description, datetime.datetime.now(), created_by))\n",
+        "      connection.commit()\n",
         "\n",
         "\n",
-        "def add_user_to_chat(username, chat_name):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"\"\"\n",
-        "        SELECT c.id, u.id\n",
-        "        FROM chats AS c\n",
-        "        JOIN users AS u ON c.name = ? AND u.name = ?\n",
-        "    \"\"\", (chat_name, username))\n",
-        "    chat_id, user_id = cursor.fetchone()\n",
-        "    cursor.execute(\"INSERT INTO chat_users (chat_id, user_id) VALUES (?, ?)\", (chat_id, user_id))\n",
-        "\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
-        "\n",
-        "\n",
-        "def send_message(username, chat_name, message):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"\"\"\n",
-        "        SELECT c.id, u.id\n",
-        "        FROM chats AS c\n",
-        "        JOIN users AS u ON c.name = ? AND u.name = ?\n",
-        "    \"\"\", (chat_name, username))\n",
-        "    chat_id, user_id = cursor.fetchone()\n",
-        "    cursor.execute(\"INSERT INTO messages (chat_id, user_id, message, created_at) VALUES (?, ?, ?, CURRENT_TIMESTAMP)\", (chat_id, user_id, message))\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
+        "def send_message(username, chatname, message):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    INSERT INTO messages (chatname, username, message, created_at)\n",
+        "                    VALUES (?, ?, ?, ?)\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (chatname, username, message, datetime.datetime.now()))\n",
+        "        connection.commit()\n",
         "\n",
         "\n",
         "def delete_user(username):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"SELECT id FROM users WHERE name = ?\", (username,))\n",
-        "    user_id = cursor.fetchone()[0]\n",
-        "    cursor.execute(\"DELETE FROM users WHERE id = ?\", (user_id,))\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
-        "\n",
-        "\n",
-        "def delete_chat(chat_name):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"SELECT id FROM chats WHERE name = ?\", (chat_name,))\n",
-        "    chat_id = cursor.fetchone()[0]\n",
-        "    cursor.execute(\"DELETE FROM chats WHERE id = ?\", (chat_id,))\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
-        "\n",
-        "\n",
-        "def delete_user_from_chat(username, chat_name):\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"\"\"\n",
-        "        SELECT c.id, u.id\n",
-        "        FROM chats AS c\n",
-        "        JOIN users AS u ON c.name = ? AND u.name = ?\n",
-        "    \"\"\", (chat_name, username))\n",
-        "    chat_id, user_id = cursor.fetchone()\n",
-        "    cursor.execute(\"DELETE FROM chat_users WHERE chat_id = ? AND user_id = ?\", (chat_id, user_id))\n",
-        "    connection.commit()\n",
-        "    cursor.close()\n",
-        "    connection.close()\n",
-        "\n",
-        "\n",
-        "def get_users():\n",
-        "    connection = sqlite3.connect(\"chat.db\")\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"SELECT * FROM users\")\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    DELETE FROM users\n",
+        "                    WHERE name = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (username,))\n",
+        "        connection.commit()\n",
         "\n",
         "\n",
         "\n",
-        "# create_db()\n",
+        "def delete_chat(chatname):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    DELETE FROM chats\n",
+        "                    WHERE name = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (chatname,))\n",
+        "        connection.commit()\n",
         "\n",
-        "# create_user(\"Alex\", 23)\n",
-        "# create_user(\"Ann\", 22)\n",
-        "# create_chat(\"new_chat\")\n",
-        "# create_chat(\"another_chat\")\n",
-        "# add_user_to_chat(\"Alex\", \"new_chat\")\n",
-        "# add_user_to_chat(\"Alex\", \"another_chat\")\n",
-        "# add_user_to_chat(\"Ann\", \"new_chat\")\n",
-        "# add_user_to_chat(\"Ann\", \"another_chat\")\n",
+        "\n",
+        "def delete_message(username, chatname, message_id):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    DELETE FROM messages\n",
+        "                    WHERE chatname = ? AND username = ? AND message_id = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (chatname, username, message_id))\n",
+        "        connection.commit()\n",
+        "\n",
+        "\n",
+        "create_db()\n",
+        "\n",
+        "# create_user(\"Alex\", 23, \"New York\")\n",
+        "# create_user(\"Ann\", 22, \"Paris\")\n",
+        "# create_chat(\"new_chat\", \"decription\", \"Alex\")\n",
+        "# create_chat(\"another_chat\", \"decription\", \"Ann\")\n",
         "# send_message(\"Alex\", \"new_chat\", \"hi\")\n",
         "# send_message(\"Alex\", \"another_chat\", \"hi\")\n",
         "# send_message(\"Ann\", \"new_chat\", \"hi\")\n",
         "# send_message(\"Ann\", \"another_chat\", \"hi\")\n",
         "\n",
         "\n",
-        "# delete_user(\"Alex\")\n",
-        "delete_user_from_chat(\"Alex\", \"new_chat\")"
+        "delete_user(\"Alex\")\n",
+        "# delete_chat(\"new_chat\")\n",
+        "# delete_user_from_chat(\"Alex\", \"new_chat\")"
       ],
       "metadata": {
         "id": "Hqd48Xvo09YO"
       },
-      "execution_count": 55,
+      "execution_count": 59,
       "outputs": []
     }
   ]
